--- a/views/productManagment.ejs
+++ b/views/productManagment.ejs
@@ -3,7 +3,7 @@
 <main>
     <section class="main-title">
         <h3 class="create-account">Lista de Productos</h3>
-        <div class="style-bar1"></div>
+        <div class="style-barA"></div>
     </section>
     <section class="products">
         <% products.forEach(prod => {%>
@@ -16,7 +16,7 @@
                         <input type="text" name="id" value="<%= prod.id %>" class="hidden-input">
                     </form>
                 </div>
-                <div class="style-bar2"></div>
+                <div class="style-barB"></div>
             </div>
         <% }) %>
     </section>
