--- a/public/css/styles-profile.css
+++ b/public/css/styles-profile.css
@@ -29,7 +29,7 @@ main {
     margin-right: 5%;
 }
 
-img {
+.prfImg {
     width: 40%;
     display: flex;
     align-items: center;
@@ -47,4 +47,63 @@ button {
     background-color: #000000;
     color: #FFFFFF;
     margin-top: 20px;
+}
+
+.email {
+    display: inline-block;
+}
+
+p {
+    display: inline-block;
+    font-size: 13px;
+
+}
+
+a {
+    text-decoration: none;
+}
+
+.deleteBtn {
+    width: 40%;
+    height: 30px;
+    font-family: 'Poppins', sans-serif;
+    background-color: #000000;
+    color: #FFFFFF;
+    margin-top: 150px;
+    padding: 0%;
+}
+
+footer {
+    margin-top: 0%;
+}
+
+@media (min-width:542px){ 
+    .name-picture {
+        flex-direction: row;
+        margin-top: 30px;
+    }
+    .prfImg {
+        width: 20%;
+        display: flex;
+        align-items: center;
+        border-radius: 50%;
+        margin-left: 55.8%;
+    }
+    h2 {
+        margin-left: 5%;
+        font-size: 30px;
+    }
+    p {
+        font-size: 17px;
+    }
+    button {
+        width: 15%;
+        height: 40px;
+        font-size: 15px;
+    }
+    .deleteBtn {
+        width: 15%;
+        font-size: 15px;
+        height: 40px;
+    }
 }
