--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -305,7 +305,14 @@ article p{
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 
-
+button {
+    cursor: pointer;
+    overflow: hidden;
+    transition: background-color 0.5s ease-in 100ms;
+}
+button:hover {
+    background-color: #8B8D8A;
+}
 
 footer {
     display: flex;
