--- a/views/product-detail.ejs
+++ b/views/product-detail.ejs
@@ -35,7 +35,7 @@
         </section>
         <section class="secondary-section">
             <div>
-                <h3 class="offers">Destacados / Ofertas</h3>
+                <h3 class="offers">Destacados</h3>
             </div>
             <div class="img-offer">
                 <img src="/img/interior/Screenshot_1.png" alt="img-alt" class="img">
