--- a/views/product-detail.ejs
+++ b/views/product-detail.ejs
@@ -14,7 +14,7 @@
                     <h3><%= prod.name %></h3>
                     <p class="description"><%= prod.description %></p>
                     <p class="category"> categoría: <%= prod.category.name %> </p>
-                    <p class="price"> Precio: <%= prod.Price %></p>
+                    <p class="price"> Precio: $<%= prod.Price %></p>
                 </div>
                 <div>
                     <form action="/saveProductToCart/<%= prod.id %>" method="POST">
