--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -213,17 +213,16 @@ right: 27px;
     flex-wrap: wrap;
 }
 .productos-disponibles article{
-    padding: 20px;
+    margin: 20px;
     position: relative;
 }
 
 .destacados article{
-    padding: 20px;
+    margin: 20px;
     position: relative;
 }
 .destacados {
     display: flex;
-    flex-wrap: wrap;
     position: relative;
 }
 .destacados img{
@@ -249,7 +248,7 @@ right: 27px;
     text-align: center;
     background-color: rgb(233, 227, 227);
     position: relative;
-    bottom: 4px;  
+    bottom: 24px;  
     border-bottom: gray solid 4px;
 }
 /* .productos-disponibles .a1 .p1{
@@ -282,9 +281,7 @@ right: 27px;
     text-align: center;
     background-color: rgb(233, 227, 227);
     position: relative;
-    bottom: 4px;
-    /* transition: all 450ms; */
-    /* opacity: 0; */
+    bottom: 24px;
     border-bottom: gray solid 4px;
 }
 /* .destacados article:hover p{
@@ -298,8 +295,16 @@ article img{
 article p{
     transition: box-shadow 450ms;
 }
+.article-hover {
+    overflow: hidden;
+}
+.article-hover img {
+    transition: transform 300ms;
+    height: 100%;
+}
 .article-hover:hover img{
     box-shadow: 0px 0px 10px rgb(100 100 100);
+    transform: scale(1.2);
 }
 .article-hover:hover p{
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
