--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,21 +23,18 @@
         <main>
             <section class="productos-disponibles">
                 <!-- <article class="a1"> -->
-                <article class="article-hover">
-                    <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-
-
-
+                <article  class="article-hover">
+                    <a href="/products?cat=2"><img src="img\img-home\Screenshot_20.png" alt="maceta1"></a>
                     <p class="p1">INTERIOR</p>
                 </article>
                 <article class="article-hover">
                     <!-- <article class="a2"> -->
-                    <img src="img\img-home\macetas-de-exterior-de-diseno.jpg" alt="maceta2">
+                    <a href="/products?cat=1"><img src="img\img-home\macetas-de-exterior-de-diseno.jpg" alt="maceta2"></a>
                     <p class="p2">EXTERIOR</p>
                 </article>
                 <article class="article-hover">
                     <!-- <article class="a3"> -->
-                    <img src="img\accesorios\Screenshot_15.png" alt="">
+                    <a href="/products?cat=3"><img src="img\accesorios\Screenshot_15.png" alt=""></a>
                     <p class="p3">ACCESORIOS</p>
                 </article>
             </section>
