--- a/views/products.ejs
+++ b/views/products.ejs
@@ -23,26 +23,12 @@
             <div class="lista-filtros">
                 <h2 class="title-line-grey"></h2>
                 <ul>
-                    <li> 
-                        <a href="*">MACETAS DE INTERIOR</a><i class="fas fa-plus"></i>
-                    </li>
-                    <li> <a href="*"> MACETAS DE EXTERIOR</a><i class="fas fa-plus"></i>
-                    </li>
-                    <li style="margin-top: 7px;"><a href="*"> ACCESORIOS </a><i class="fas fa-plus" style="align-self: flex-end;"></i>
-                    
-
-                    </li>
+                    <li class="categoryLink"> <a href="/products?cat=2">MACETAS DE INTERIOR</a></li>
+                    <li class="categoryLink"> <a href="/products?cat=1"> MACETAS DE EXTERIOR</a></li>
+                    <li style="margin-top: 7px;" class="categoryLink"><a href="/products?cat=3"> ACCESORIOS </a></li>
+                    <li class="categoryLink"> <a href="/products"> TODOS</a></li>
                 </ul>
                 <h2 class="title-line-grey"></h2>
-                <ul>
-                    <li> <a href="*">COLOR</a> <i class="fas fa-plus"></i>
-                    </li>
-                </ul>
-                <h2 class="title-line-grey"></h2>
-                <ul>
-                    <li><a href="*"> FILTRAR POR PRECIO</a><i class="fas fa-plus"></i>
-                    </li>
-                </ul>
 
             </div>
             <div class="lista-de-productos">
