--- a/views/product-detail.ejs
+++ b/views/product-detail.ejs
@@ -38,10 +38,9 @@
                 <h3 class="offers">Destacados</h3>
             </div>
             <div class="img-offer">
-                <img src="/img/interior/Screenshot_1.png" alt="img-alt" class="img">
-                <img src="/img/interior/Screenshot_9.png" alt="img-alt" class="img">
-                <img src="/img/interior/Screenshot_10.png" alt="img-alt" class="img">
-                <img src="/img/interior/Screenshot_17.png" alt="img-alt" class="img">
+                <% productRooster.forEach(product => { %>
+                    <img src="/img/productos/<%= product.img %>" alt="img-alt" class="img">
+                <% }) %>
             </div>
         </section>
     </main>
