--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,8 +9,8 @@
                 <div class="line3"></div>
             </div>
             <div class="header-social-icons">
-                <a href="https://www.instagram.com" class="icon-link-header"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com" class="icon-link-header"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com" class="icon-link-header"><i class="fab fa-instagram header-icon"></i></a>
+                <a href="https://www.facebook.com" class="icon-link-header"><i class="fab fa-facebook-square header-icon"></i></a>
             </div>
             <a class="logo-img" href="/" style="text-decoration: none;">
                 <img src="/img/logo.jpg" alt="logo">
