--- a/views/productManagment.ejs
+++ b/views/productManagment.ejs
@@ -20,6 +20,7 @@
             </div>
         <% }) %>
     </section>
+    <a href="/dashboard/" class="dashboardLink">DASHBOARD</a>
 </main>
 <%- include('./partials/footer') %> 
     <script src="../js/prueba.js"></script>
