--- a/public/css/styles-product-managment.css
+++ b/public/css/styles-product-managment.css
@@ -60,6 +60,19 @@ button {
     padding: 0%;
 }
 
+.dashboardLink {
+    margin-left: 2.5%;
+    color: black;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    transition: color 300ms;
+}
+
+.dashboardLink:hover {
+    color: #8B8D8A;
+}
+
 footer {
     margin-top: 160px;
 }
