--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,17 +20,7 @@
             </a>
             
             <% if (locals.isLogged) { %>                
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropUser" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="../../logo.png" width="40" style="border-radius: 100%;">
-                                Hi User
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/profile">My profile</a>
-                                <li><hr class="dropdown-divider"></li>
-                                <a class="dropdown-item" href="/logout">Logout</a>
-                            </ul>
-                        </li>
+                       
             <div class="carrito">
                 <a href="/compras">
                     <i class="fas fa-shopping-bag"></i>
@@ -64,7 +54,21 @@
         </div>
         <div class="barra">
             
+            
                 <ul class="nav-ul">
+                    <div class='user-bar'>
+                         <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="dropUser" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="/img/userImg/" width="40" style="border-radius: 100%;">
+                                Hi User
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="/profile">My profile</a>
+                                <li><hr></li>
+                                <a class="dropdown-item" href="/logout">Logout</a>
+                            </ul>
+                        </li>
+                    </div>
                     <li>
                         <a href="/" class="a-inicio">INICIO</a>
                     </li>
