arreglado error con las rutas de admin

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -22,7 +22,7 @@
         <section class="catalogo">
             <div class="lista-filtros">
                 <h2 class="title-line-grey"></h2>
-                <ul>
+                <ul class="ul-side">
                     <li class="categoryLink"> <a href="/products?cat=2">MACETAS DE INTERIOR</a></li>
                     <li class="categoryLink"> <a href="/products?cat=1"> MACETAS DE EXTERIOR</a></li>
                     <li style="margin-top: 7px;" class="categoryLink"><a href="/products?cat=3"> ACCESORIOS </a></li>
@@ -30,7 +30,7 @@
                 </ul>
                 <h2 class="title-line-grey"></h2>
                 <% if (confirmation === true) { %>
-                <ul>
+                <ul class="ul-side">
                     <li class="categoryLink"><a href="/products/create">CREAR PRODUCTO</a></li>
                     <li class="categoryLink"><a href="/products/managment">GESTION DE PRODUCTOS</a></li>
                 </ul>
