--- a/public/css/styles-product-detail.css
+++ b/public/css/styles-product-detail.css
@@ -94,8 +94,13 @@ form button {
     flex-wrap: wrap;
 }
 
-.img {
+.img-link1 {
     width: 50%;
+}
+
+.img {
+    width: 100%;
+    height: 100%;
     transition: border 3s;
 }
 
@@ -199,6 +204,9 @@ footer section p {
     form {
         margin-bottom: 0px;
     }
+    .img-link1 {
+        width: 25%;
+    }
     .support-img {
         display: inline-block;
         width: 20%;
@@ -242,9 +250,6 @@ footer section p {
         background-color: white;
         color: black;
         text-align: center;
-    }
-    .img {
-        width: 25%;
     }
     .style-bar2 {
         margin-left: 12%;
