--- a/views/product-detail.ejs
+++ b/views/product-detail.ejs
@@ -39,7 +39,7 @@
             </div>
             <div class="img-offer">
                 <% productRooster.forEach(product => { %>
-                    <img src="/img/productos/<%= product.img %>" alt="img-alt" class="img">
+                    <a href="/products/product/<%= product.id %>" class="img-link1"><img src="/img/productos/<%= product.img %>" alt="img-alt" class="img"></a>
                 <% }) %>
             </div>
         </section>
