--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -50,9 +50,9 @@
                         Hi User
                     </a> -->
                     <ul class="font " aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/profile">My profile</a>
+                        <a class="dropdown-item" style= 'color:white; text-decoration: none;' href="/profile">My profile</a>
                         <li><hr></li>
-                        <a class="dropdown-item" href="/logout">Logout</a>
+                        <a class="dropdown-item" style= 'color:white; text-decoration: none;' href="/logout">Logout</a>
                     </ul>
            
             </div>
@@ -77,14 +77,14 @@
                                 Hi User
                             </a> -->
                             <ul class="font" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/profile">My profile</a>
+                                <a class="dropdown-item" style= 'color:white; text-decoration: none;' href="/profile">My profile</a>
                                 <li style='padding-right: 12px;'><hr></li>
-                                <a class="dropdown-item" href="/logout">Logout</a>
+                                <a class="dropdown-item" style= 'color:white; text-decoration: none;' href="/logout">Logout</a>
                             </ul>
                    
                     </div>
                     <% } %>
-                    <li>
+                    <li class="top-1">
                         <a href="/" class="a-inicio">INICIO</a>
                     </li>
                     <li>
