--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -49,13 +49,12 @@
                         <img src="/img/userImg/" width="40" style="border-radius: 100%;">
                         Hi User
                     </a> -->
-                    <ul class="font " aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" style= 'color:white; text-decoration: none;' href="/profile">My profile</a>
-                        <li><hr></li>
-                        <a class="dropdown-item" style= 'color:white; text-decoration: none;' href="/logout">Logout</a>
-                    </ul>
+                        <ul class="font" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" style= 'color:white; text-decoration: none;' href="/profile">Mi Perfil</a>
+                                <li style='padding-right: 12px;'><hr></li>
+                                <a class="dropdown-item" style= 'color:white; text-decoration: none;' href="/logout">Cerrar Sesion</a>
+                            </ul>
            
-            </div>
                 <% }else { %>
                 <li>
                     <i class="far fa-user-circle header-icon"></i>
