--- a/react-dashboard/src/components/products/styles-products.css
+++ b/react-dashboard/src/components/products/styles-products.css
@@ -4,6 +4,18 @@
     
 }
 
+.productUl {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0%;
+    display: none;
+}
+
+.new-ul {
+    display: block;
+}
+
 .products {
     width: 45%;
     padding-bottom: 5%;
