--- a/views/compras.ejs
+++ b/views/compras.ejs
@@ -20,7 +20,7 @@
                                     <div class="precio-cantidad">
                                         <div class="precio-unitario">
                                         <p>PRECIO UNITARIO</p>
-                                        <p class="precioU" style="margin-bottom: 15px;"><%= product.productFound.Price %></p>
+                                        <p class="precioU" style="margin-bottom: 15px;">$<%= product.productFound.Price %></p>
                                         </div>
                                         <div class="cantidad">
                                         <p>CANTIDAD</p>
