--- a/views/userEdit.ejs
+++ b/views/userEdit.ejs
@@ -37,6 +37,7 @@
     </main>
 <%- include('./partials/footer') %> 
     <script src="../js/prueba.js"></script>
+    <script src="../js/formValidationRegister.js"></script>
 </body>
 
 </html>
