--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -16,7 +16,7 @@
 
                 <h3 class="texto">Preguntas Frecuentes</h3>
                 <p class="texto">Todo los que tenés que saber acerca de nuestros productos</p>
-                <a href="">Leer mas</a>
+                <a href="" class="fakeBtn">Leer mas</a>
 
             </div>
             <div class="articulos-blog">
@@ -24,7 +24,7 @@
 
                 <h3 class="texto">Cuida tus plantas</h3>
                 <p class="texto">¿Queres saber como cuidar tus plantas?</p>
-                <a href="">Leer mas</a>
+                <a href="" class="fakeBtn">Leer mas</a>
 
             </div>
             <div class="articulos-blog">
@@ -32,7 +32,7 @@
 
                 <h3 class="texto">Decora tus espacio</h3>
                 <p class="texto">Conoce las nuevas tendencias y como decorar tus espacios</p>
-                <a href="">Leer mas</a>
+                <a href="" class="fakeBtn">Leer mas</a>
 
             </div>
         </section>
