--- a/public/css/styles-profile.css
+++ b/public/css/styles-profile.css
@@ -88,6 +88,7 @@ footer {
         align-items: center;
         border-radius: 50%;
         margin-left: 40%;
+        height: 100%;
     }
     h2 {
         margin-left: 5%;
