--- a/public/css/styles-products.css
+++ b/public/css/styles-products.css
@@ -7,11 +7,14 @@ a{
 a:link{
     color: black;
     text-decoration: none;
-    font-weight:bold;
 
 }
 a:hover{
     text-decoration: underline;
+}
+
+.categoryLink {
+    font-weight: bold;
 }
 
 .buscador{
